--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <p class="padrao">Lorem ipsum dolor sit amet consectetur adipisicing elit. Consectetur possimus sint ea magnam earum ex, dolorem soluta suscipit a voluptatem ab veniam, cumque mollitia optio quis. Fugiat quo blanditiis ullam!</p>
+    <p class="padrao">Lorem ipsum dolor sit amet consectetur adipisicing elit. Consectetur possimus sint ea magnam al earum ex, dolorem soluta suscipit a voluptatem ab veniam, cumque mollitia optio quis. Fugiat quo blanditiis ullam!</p>
 
     <p class="destacado">Lorem ipsum dolor sit amet consectetur adipisicing elit. A, asperiores. Rem error vero atque hic unde ducimus suscipit eius dolor distinctio animi placeat laudantium veniam odit architecto, voluptatum impedit assumenda?</p>
 </body>
